--- a/flores 21/flores21.html
+++ b/flores 21/flores21.html
@@ -172,6 +172,25 @@ svg { width: 100%; height: auto; max-width: 400px; }
 
 #avion { position:absolute; width:50px; top:50%; left:50%; transform: translate(-50%,-50%) scale(0); transition: transform 1s ease; z-index:20; }
 
+.volver-inicio{
+  position: fixed;
+  top: 14px;
+  left: 14px;
+  z-index: 9999;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  padding: 10px 12px;
+  border-radius: 999px;
+  background: rgba(255,255,255,.78);
+  border: 1px solid rgba(0,0,0,.10);
+  color: #3b2f2f;
+  text-decoration: none;
+  font-weight: 800;
+  box-shadow: 0 10px 26px rgba(0,0,0,.18);
+}
+.volver-inicio:hover{ transform: translateY(-1px); background: rgba(255,255,255,.92); }
+
 /* ==== Carta estilo sobre ==== */
 #carta {
   position: absolute;
@@ -302,6 +321,8 @@ svg { width: 100%; height: auto; max-width: 400px; }
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<a class="volver-inicio" href="../index.html" aria-label="Volver al inicio">← Inicio</a>
 
 <div id="boton-musica" title="Play / Pause">
   <svg id="icono-musica" class="icono-svg" viewBox="0 0 64 64">
