--- a/corazon_candado_tulipanes/index22.html
+++ b/corazon_candado_tulipanes/index22.html
@@ -11,7 +11,28 @@
     body {
       box-sizing: border-box;
     }
-    
+
+    .volver-inicio{
+      position: fixed;
+      top: 14px;
+      left: 14px;
+      z-index: 9999;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 12px;
+      border-radius: 999px;
+      background: rgba(0,0,0,.50);
+      border: 1px solid rgba(255,255,255,.18);
+      color: #fff;
+      text-decoration: none;
+      font-weight: 800;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      box-shadow: 0 10px 30px rgba(0,0,0,.25);
+    }
+    .volver-inicio:hover{ transform: translateY(-1px); background: rgba(0,0,0,.66); }
+
     :root {
       --bg-space: #0a0a1a;
       --star-color: #fff8e7;
@@ -556,6 +577,7 @@
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
  </head>
  <body class="h-full m-0 p-0 overflow-hidden">
+  <a class="volver-inicio" href="../index.html" aria-label="Volver al inicio">← Inicio</a>
   <div id="app" class="w-full h-full space-bg relative overflow-hidden"><!-- Nebulosas de fondo -->
    <div class="nebula" style="width: 400px; height: 400px; background: #ff6b9d; top: 10%; left: 10%;"></div>
    <div class="nebula" style="width: 300px; height: 300px; background: #9d4edd; top: 20%; right: 15%; animation-delay: -5s;"></div>
