--- a/index.html
+++ b/index.html
@@ -1,259 +1,249 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Escape Rompecabezas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Mis cosos ✨</title>
+  <meta name="description" content="Índice con todos los cosos de esta carpeta." />
+  <style>
+    :root{
+      --bg1:#0b1020;
+      --bg2:#180b2b;
+      --card: rgba(255,255,255,.08);
+      --card2: rgba(255,255,255,.12);
+      --stroke: rgba(255,255,255,.14);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.70);
+      --accent1:#a855f7;
+      --accent2:#22d3ee;
+      --accent3:#f472b6;
+    }
 
-<style>
-body{
-  background:#080812;
-  color:#fff;
-  font-family:Arial, sans-serif;
-  text-align:center;
-  margin:0;
-  padding:20px;
-}
-h1{margin-bottom:5px;}
-section{
-  display:none;
-  max-width:600px;
-  margin:auto;
-  background:#141424;
-  padding:20px;
-  border-radius:14px;
-  box-shadow:0 0 20px rgba(0,0,0,0.5);
-}
-section.active{display:block;}
-.box{
-  display:inline-block;
-  padding:15px;
-  margin:8px;
-  background:#ff4ecd;
-  border-radius:10px;
-  cursor:pointer;
-  font-size:24px;
-}
-input{
-  padding:10px;
-  border-radius:10px;
-  border:none;
-  margin-top:10px;
-  width:80%;
-  text-align:center;
-}
-button{
-  padding:10px 25px;
-  border-radius:20px;
-  border:none;
-  background:#6ee7ff;
-  font-size:16px;
-  cursor:pointer;
-  margin-top:15px;
-}
-button:hover{opacity:.9;}
-.error{color:#ff6b6b;margin-top:10px;}
-</style>
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      color:var(--text);
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
+      background:
+        radial-gradient(900px 500px at 15% 10%, rgba(168,85,247,.20), transparent 55%),
+        radial-gradient(900px 500px at 85% 20%, rgba(34,211,238,.16), transparent 55%),
+        radial-gradient(900px 600px at 50% 95%, rgba(244,114,182,.14), transparent 60%),
+        linear-gradient(180deg, var(--bg1), var(--bg2));
+      overflow-x:hidden;
+    }
+
+    .wrap{
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: clamp(18px, 3vw, 34px);
+    }
+
+    header{
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap: 16px;
+      margin-bottom: 18px;
+    }
+
+    .title{
+      line-height:1.05;
+      margin:0;
+      font-size: clamp(1.9rem, 4vw, 3.2rem);
+      letter-spacing:-0.02em;
+    }
+
+    .subtitle{
+      margin: 10px 0 0;
+      color: var(--muted);
+      font-size: clamp(1rem, 1.7vw, 1.15rem);
+      max-width: 56ch;
+    }
+
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding: 10px 14px;
+      background: rgba(255,255,255,.06);
+      border: 1px solid var(--stroke);
+      border-radius: 999px;
+      color: var(--muted);
+      font-size: .95rem;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      box-shadow: 0 12px 30px rgba(0,0,0,.25);
+      user-select:none;
+      white-space:nowrap;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 14px;
+      margin-top: 18px;
+    }
+
+    .card{
+      grid-column: span 12;
+      text-decoration:none;
+      color:inherit;
+      position:relative;
+      overflow:hidden;
+      border-radius: 18px;
+      background: linear-gradient(180deg, var(--card), rgba(255,255,255,.05));
+      border: 1px solid var(--stroke);
+      box-shadow: 0 18px 44px rgba(0,0,0,.28);
+      padding: 16px 16px 14px;
+      transition: transform .18s ease, border-color .18s ease, background .18s ease;
+    }
+
+    .card:hover{
+      transform: translateY(-2px);
+      border-color: rgba(255,255,255,.22);
+      background: linear-gradient(180deg, var(--card2), rgba(255,255,255,.06));
+    }
+
+    .card::before{
+      content:"";
+      position:absolute;
+      inset:-40px;
+      background:
+        radial-gradient(220px 140px at 10% 10%, rgba(168,85,247,.25), transparent 65%),
+        radial-gradient(240px 150px at 90% 20%, rgba(34,211,238,.22), transparent 70%),
+        radial-gradient(200px 160px at 30% 120%, rgba(244,114,182,.18), transparent 70%);
+      opacity:.9;
+      pointer-events:none;
+    }
+
+    .card > *{ position:relative; }
+
+    .card h2{
+      margin: 0 0 8px;
+      font-size: 1.25rem;
+      letter-spacing:-0.01em;
+    }
+
+    .meta{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 10px;
+      color: var(--muted);
+      font-size: .95rem;
+    }
+
+    .tag{
+      display:inline-flex;
+      gap:8px;
+      align-items:center;
+      padding: 6px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(0,0,0,.18);
+      color: rgba(255,255,255,.78);
+      font-size: .85rem;
+    }
+
+    .arrow{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      width: 36px;
+      height: 36px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.16);
+      background: rgba(255,255,255,.06);
+      color: rgba(255,255,255,.88);
+      flex: 0 0 auto;
+    }
+
+    footer{
+      margin-top: 22px;
+      color: rgba(255,255,255,.60);
+      font-size: .9rem;
+    }
+
+    @media (min-width: 740px){
+      .card{ grid-column: span 6; padding: 18px; }
+    }
+    @media (min-width: 1020px){
+      .card{ grid-column: span 4; }
+    }
+  </style>
 </head>
-
 <body>
+  <div class="wrap">
+    <header>
+      <div>
+        <h1 class="title">Galería de recuerdos ✨</h1>
+        
+      </div>
+      <div class="pill" title="Carpeta: sol">Solcitoo<33</div>
+    </header>
 
-<h1>🧩 Escape Rompecabezas</h1>
-<p>Superá los 5 desafíos para continuar</p>
+    <div class="grid">
+      <a class="card" href="corazon_candado_tulipanes/index.html">
+        <h2>Corazón Secreto Espacial</h2>
+        <div class="meta">
+          <span class="tag">corazon_candado_tulipanes</span>
+          <span class="arrow">→</span>
+        </div>
+      </a>
 
-<!-- JUEGO 1 -->
-<section class="active">
-  <h2>1️⃣ Ordená las piezas</h2>
-  <p>Tocá en orden: 🌙 ⭐ ❤️</p>
-  <div>
-    <div class="box" onclick="tap('❤️')">❤️</div>
-    <div class="box" onclick="tap('🌙')">🌙</div>
-    <div class="box" onclick="tap('⭐')">⭐</div>
+      <!-- <a class="card" href="corazon_candado_tulipanes/index.html">
+        <h2>Tulipanes Espaciales</h2>
+        <div class="meta">
+          <span class="tag">corazon_candado_tulipanes</span>
+          <span class="arrow">→</span>
+        </div>
+      </a> -->
+
+      <a class="card" href="tulipanes/flor_tulipan.html">
+        <h2>Flor (Tulipanes)</h2>
+        <div class="meta">
+          <span class="tag">tulipanes</span>
+          <span class="arrow">→</span>
+        </div>
+      </a>
+
+      <!-- <a class="card" href="flores%2021/flores21.html">
+        <h2>Flores 21</h2>
+        <div class="meta">
+          <span class="tag">flores 21</span>
+          <span class="arrow">→</span>
+        </div>
+      </a> -->
+
+      <a class="card" href="flores%20amarillas%20imagen%20ff/index.html">
+        <h2>Flores (amarillas, imagen ff)</h2>
+        <div class="meta">
+          <span class="tag">flores amarillas imagen ff</span>
+          <span class="arrow">→</span>
+        </div>
+      </a>
+
+      <a class="card" href="flores%20moradas%20con%20frases/index.html">
+        <h2>Flores 21 (moradas con frases)</h2>
+        <div class="meta">
+          <span class="tag">flores moradas con frases</span>
+          <span class="arrow">→</span>
+        </div>
+      </a>
+
+      <!-- <a class="card" href="flores%20moradas%20con%20frases/flores21.html">
+        <h2>Flores 21 (moradas con frases)</h2>
+        <div class="meta">
+          <span class="tag">flores moradas con frases</span>
+          <span class="arrow">→</span>
+        </div>
+      </a> -->
+    </div>
+
+    <footer>
+      
+    </footer>
   </div>
-  <div id="msg1" class="error"></div>
-</section>
-
-<!-- JUEGO 2 -->
-<section>
-  <h2>2️⃣ Memoria rápida</h2>
-  <p>Memorizá el número (2 segundos)</p>
-  <h2 id="num">---</h2>
-  <input id="mem" placeholder="Ingresá el número">
-  <button onclick="checkMem()">Confirmar</button>
-  <div id="msg2" class="error"></div>
-</section>
-
-<!-- JUEGO 3 -->
-<section>
-  <h2>3️⃣ Secuencia lógica</h2>
-  <p>2 – 4 – 8 – ?</p>
-  <input id="seq" placeholder="Respuesta">
-  <button onclick="checkSeq()">Confirmar</button>
-  <div id="msg3" class="error"></div>
-</section>
-
-<!-- JUEGO 4 -->
-<section>
-  <h2>4️⃣ Palabras del corazón</h2>
-  <p id="wordText">Ordená esta palabra 💫</p>
-  <h3 id="scrambled">alleb</h3>
-
-  <input id="code" placeholder="Escribí la palabra">
-  <button onclick="checkCode()">Confirmar</button>
-  <div id="msg4" class="error"></div>
-</section>
-
-<!-- MODAL -->
-<div id="modal" style="
-  display:none;
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,0.8);
-  align-items:center;
-  justify-content:center;
-  z-index:1000;
-">
-  <div style="
-    background:#141424;
-    padding:25px;
-    border-radius:16px;
-    max-width:400px;
-    text-align:center;
-    box-shadow:0 0 20px rgba(255,255,255,0.15);
-  ">
-    <h2>💖</h2>
-<p style="font-size:18px; line-height:1.5;">
-  Si alguna vez pensás que no sos linda,  
-  acordate de esto:  
-  sos hermosa, sos bella  
-  y eso no se discute solcitoo 😍😚
-</p>
-
-    <p style="margin-top:15px;">
-      Continuando en <b id="countdown">12</b>…
-    </p>
-  </div>
-</div>
-
-<!-- JUEGO 5 -->
-<section>
-  <h2>5️⃣ Último candado</h2>
-  <p>Escribí la palabra que lo abre todo 💖</p>
-  <input id="final" placeholder="Palabra final">
-  <button onclick="finish()">Desbloquear</button>
-  <div id="msg5" class="error"></div>
-</section>
-
-<script>
-const sections = document.querySelectorAll("section");
-let current = 0;
-
-/* -------- PASAR DE SECCIÓN -------- */
-function next(){
-  sections[current].classList.remove("active");
-  current++;
-  sections[current].classList.add("active");
-
-  if(current === 1) startMemoryGame();
-}
-
-/* -------- JUEGO 1 -------- */
-let order = [];
-const correct = ['🌙','⭐','❤️'];
-
-function tap(v){
-  order.push(v);
-  if(order.length === 3){
-    if(JSON.stringify(order) === JSON.stringify(correct)){
-      next();
-    } else {
-      order = [];
-      msg1.textContent = "Orden incorrecto 😵";
-    }
-  }
-}
-
-/* -------- JUEGO 2 -------- */
-let memoryNumber = 0;
-
-function startMemoryGame(){
-  mem.value = "";
-  msg2.textContent = "";
-  memoryNumber = Math.floor(1000 + Math.random() * 9000);
-  num.textContent = memoryNumber;
-
-  setTimeout(() => {
-    num.textContent = "❓❓❓";
-  }, 2000);
-}
-
-function checkMem(){
-  if(mem.value == memoryNumber){
-    next();
-  } else {
-    msg2.textContent = "Ese no era 👀";
-  }
-}
-
-/* -------- JUEGO 3 -------- */
-function checkSeq(){
-  if(seq.value == 16){
-    next();
-  } else {
-    msg3.textContent = "Pensalo mejor 🤔";
-  }
-}
-
-/* -------- JUEGO 4 -------- */
-let step4 = 0;
-
-function checkCode(){
-  const value = code.value.toLowerCase().trim();
-
-  if(step4 === 0 && value === "bella"){
-    step4 = 1;
-    code.value = "";
-    msg4.textContent = "";
-    scrambled.textContent = "adnil";
-    wordText.textContent = "Ahora ordená esta otra 💫";
-    return;
-  }
-
-  if(step4 === 1 && value === "linda"){
-    openModal();
-    return;
-  }
-
-  msg4.textContent = "Casi… acomodala bien 🫶";
-}
-
-/* -------- MODAL -------- */
-function openModal(){
-  modal.style.display = "flex";
-  let time = 12;
-  countdown.textContent = time;
-
-  const interval = setInterval(() => {
-    time--;
-    countdown.textContent = time;
-
-    if(time === 0){
-      clearInterval(interval);
-      modal.style.display = "none";
-      next();
-    }
-  }, 1000);
-}
-
-/* -------- JUEGO 5 -------- */
-function finish(){
-  if(final.value.toLowerCase().includes("amor")){
-    window.location.href = "flores21.html";
-  } else {
-    msg5.textContent = "Todavía no 💔";
-  }
-}
-</script>
-
 </body>
 </html>
