--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <meta name="description" content="Índice con todos los cosos de esta carpeta." />
   <style>
     :root{
-      --bg1:#0b1020;
-      --bg2:#180b2b;
-      --card: rgba(255,255,255,.08);
-      --card2: rgba(255,255,255,.12);
-      --stroke: rgba(255,255,255,.14);
-      --text: rgba(255,255,255,.92);
-      --muted: rgba(255,255,255,.70);
-      --accent1:#a855f7;
-      --accent2:#22d3ee;
-      --accent3:#f472b6;
+      --bg1: #fff0f6;
+      --bg2: #fbeaff;
+      --card: rgba(255,255,255,0.85);
+      --card2: rgba(255,255,255,0.95);
+      --stroke: #f8bbd0;
+      --text: #7c3a6a;
+      --muted: #b48bbd;
+      --accent1: #f48fb1;
+      --accent2: #b39ddb;
+      --accent3: #ffe082;
+      --gold: #ffd700;
     }
 
     *{ box-sizing:border-box; }
@@ -24,13 +25,14 @@
     body{
       margin:0;
       color:var(--text);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
+      font-family: 'Quicksand', 'Nunito', 'Segoe UI', Arial, sans-serif;
       background:
-        radial-gradient(900px 500px at 15% 10%, rgba(168,85,247,.20), transparent 55%),
-        radial-gradient(900px 500px at 85% 20%, rgba(34,211,238,.16), transparent 55%),
-        radial-gradient(900px 600px at 50% 95%, rgba(244,114,182,.14), transparent 60%),
+        radial-gradient(900px 500px at 15% 10%, #ffe0ef 30%, transparent 60%),
+        radial-gradient(900px 500px at 85% 20%, #e1bee7 25%, transparent 60%),
+        radial-gradient(900px 600px at 50% 95%, #fffde7 20%, transparent 60%),
         linear-gradient(180deg, var(--bg1), var(--bg2));
       overflow-x:hidden;
+      min-height: 100vh;
     }
 
     .wrap{
@@ -50,8 +52,11 @@
     .title{
       line-height:1.05;
       margin:0;
-      font-size: clamp(1.9rem, 4vw, 3.2rem);
+      font-size: clamp(2.1rem, 4vw, 3.2rem);
       letter-spacing:-0.02em;
+      font-family: 'Quicksand', 'Nunito', 'Segoe UI', Arial, sans-serif;
+      color: var(--accent1);
+      text-shadow: 0 2px 12px #ffe0ef80;
     }
 
     .subtitle{
@@ -65,17 +70,17 @@
       display:inline-flex;
       align-items:center;
       gap:8px;
-      padding: 10px 14px;
-      background: rgba(255,255,255,.06);
-      border: 1px solid var(--stroke);
+      padding: 10px 18px;
+      background: linear-gradient(90deg, #ffe0ef 60%, #fffde7 100%);
+      border: 1.5px solid var(--accent1);
       border-radius: 999px;
-      color: var(--muted);
-      font-size: .95rem;
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      box-shadow: 0 12px 30px rgba(0,0,0,.25);
+      color: var(--accent1);
+      font-size: 1.05rem;
+      font-weight: 600;
+      box-shadow: 0 4px 18px #f8bbd055;
       user-select:none;
       white-space:nowrap;
+      letter-spacing: 0.01em;
     }
 
     .grid{
@@ -91,18 +96,20 @@
       color:inherit;
       position:relative;
       overflow:hidden;
-      border-radius: 18px;
-      background: linear-gradient(180deg, var(--card), rgba(255,255,255,.05));
-      border: 1px solid var(--stroke);
-      box-shadow: 0 18px 44px rgba(0,0,0,.28);
-      padding: 16px 16px 14px;
+      border-radius: 22px;
+      background: linear-gradient(180deg, var(--card), var(--card2));
+      border: 2px solid var(--accent1);
+      box-shadow: 0 8px 32px #f8bbd055, 0 2px 8px #fffde7cc;
+      padding: 18px 18px 16px;
       transition: transform .18s ease, border-color .18s ease, background .18s ease;
+      backdrop-filter: blur(2px);
     }
 
     .card:hover{
-      transform: translateY(-2px);
-      border-color: rgba(255,255,255,.22);
-      background: linear-gradient(180deg, var(--card2), rgba(255,255,255,.06));
+      transform: translateY(-4px) scale(1.025);
+      border-color: var(--gold);
+      background: linear-gradient(180deg, #fffde7 60%, #ffe0ef 100%);
+      box-shadow: 0 12px 36px #ffd70044, 0 2px 8px #fffde7cc;
     }
 
     .card::before{
@@ -110,10 +117,10 @@
       position:absolute;
       inset:-40px;
       background:
-        radial-gradient(220px 140px at 10% 10%, rgba(168,85,247,.25), transparent 65%),
-        radial-gradient(240px 150px at 90% 20%, rgba(34,211,238,.22), transparent 70%),
-        radial-gradient(200px 160px at 30% 120%, rgba(244,114,182,.18), transparent 70%);
-      opacity:.9;
+        radial-gradient(220px 140px at 10% 10%, #f8bbd0 30%, transparent 65%),
+        radial-gradient(240px 150px at 90% 20%, #b39ddb 22%, transparent 70%),
+        radial-gradient(200px 160px at 30% 120%, #ffe082 18%, transparent 70%);
+      opacity:.5;
       pointer-events:none;
     }
 
@@ -121,8 +128,12 @@
 
     .card h2{
       margin: 0 0 8px;
-      font-size: 1.25rem;
+      font-size: 1.22rem;
       letter-spacing:-0.01em;
+      color: var(--accent1);
+      font-family: 'Quicksand', 'Nunito', 'Segoe UI', Arial, sans-serif;
+      font-weight: 700;
+      text-shadow: 0 1px 8px #ffe0ef55;
     }
 
     .meta{
@@ -131,19 +142,21 @@
       justify-content:space-between;
       gap: 10px;
       color: var(--muted);
-      font-size: .95rem;
+      font-size: .97rem;
     }
 
     .tag{
       display:inline-flex;
       gap:8px;
       align-items:center;
-      padding: 6px 10px;
+      padding: 6px 12px;
       border-radius: 999px;
-      border: 1px solid rgba(255,255,255,.14);
-      background: rgba(0,0,0,.18);
-      color: rgba(255,255,255,.78);
-      font-size: .85rem;
+      border: 1.5px solid var(--accent2);
+      background: #f3e5f5;
+      color: #7c3a6a;
+      font-size: .89rem;
+      font-weight: 500;
+      letter-spacing: 0.01em;
     }
 
     .arrow{
@@ -153,31 +166,36 @@
       width: 36px;
       height: 36px;
       border-radius: 999px;
-      border: 1px solid rgba(255,255,255,.16);
-      background: rgba(255,255,255,.06);
-      color: rgba(255,255,255,.88);
+      border: 1.5px solid var(--accent3);
+      background: #fffde7;
+      color: #fbc02d;
       flex: 0 0 auto;
+      font-size: 1.2rem;
+      box-shadow: 0 2px 8px #ffe08244;
     }
 
     footer{
       margin-top: 22px;
-      color: rgba(255,255,255,.60);
-      font-size: .9rem;
+      color: #b48bbd;
+      font-size: .95rem;
+      text-align: center;
     }
 
     @media (min-width: 740px){
-      .card{ grid-column: span 6; padding: 18px; }
+      .card{ grid-column: span 6; padding: 22px; }
     }
     @media (min-width: 1020px){
       .card{ grid-column: span 4; }
     }
   </style>
+  <!-- Google Fonts: Quicksand & Nunito -->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="wrap">
     <header>
       <div>
-        <h1 class="title">Galería de recuerdos ✨</h1>
+        <h1 class="title">Galería de recuerdos 💘</h1>
         
       </div>
       <div class="pill" title="Carpeta: sol">Solcitoo<33</div>
@@ -232,13 +250,13 @@
         </div>
       </a>
 
-      <!-- <a class="card" href="flores%20moradas%20con%20frases/flores21.html">
-        <h2>Flores 21 (moradas con frases)</h2>
+      <a class="card" href="sorpresaQR/index.html">
+        <h2>Sorpresa (QR)</h2>
         <div class="meta">
-          <span class="tag">flores moradas con frases</span>
+          <span class="tag">amor</span>
           <span class="arrow">→</span>
         </div>
-      </a> -->
+      </a> 
     </div>
 
     <footer>
