--- a/index.html
+++ b/index.html
@@ -249,11 +249,18 @@
           <span class="arrow">→</span>
         </div>
       </a>
-
+          <!-- proximamenteeee sorpresaQR -->
       <a class="card" href="mantenimiento/index.html">
         <h2>Sorpresa (QR)</h2>
         <div class="meta">
           <span class="tag">amor</span>
+          <span class="arrow">→</span>
+        </div>
+      </a> 
+            <a class="card" href="corazonconmusica/index.html">
+        <h2>Corazon (el espacio)</h2>
+        <div class="meta">
+          <span class="tag">Musica</span>
           <span class="arrow">→</span>
         </div>
       </a> 
