--- a/mantenimiento/index.html
+++ b/mantenimiento/index.html
@@ -93,7 +93,7 @@
   <main class="card" role="main">
     <section class="left">
       <div class="sign"><span class="sad-emoji">🌧️</span><span>En reparación</span></div>
-      <h1>Ups... estamos arreglando esto</h1>
+      <h1>Ups... estamos arreglando esto, tenes que esperar jdsld</h1>
       <p class="lead">Perdón por el mal rato. El sitio está en mantenimiento — hoy está lloviendo un poco y la conexión está triste. Volveremos a estar como nuevos pronto.</p>
 
       <div class="meta"> 
