--- a/sorpresaQR/index.html
+++ b/sorpresaQR/index.html
@@ -151,9 +151,31 @@
       border-color: var(--gold);
       color: #b48bbd;
     }
+       .volver-inicio{
+        position: fixed;
+        top: 16px;
+        left: 20px;
+        z-index: 9999;
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        padding: 10px 12px;
+        border-radius: 999px;
+        background: rgba(0,0,0,.55);
+        border: 1px solid rgba(255,255,255,.20);
+        color: #fff;
+        text-decoration: none;
+        font-weight: 800;
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        box-shadow: 0 10px 30px rgba(0,0,0,.25);
+      }
+      .volver-inicio:hover{ transform: translateY(-1px); background: rgba(0,0,0,.70); }
   </style>
 </head>
 <body>
+    <a class="volver-inicio" href="../index.html" aria-label="Volver al inicio">← </a>
+
   <div class="wrap">
     <main class="panel">
       <header>
