--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
       </a>
           <!-- proximamenteeee sorpresaQR -->
-      <a class="card" href="mantenimiento/index.html">
+      <a class="card" href="sorpresaQR/index.html">
         <h2>Sorpresa (QR)</h2>
         <div class="meta">
           <span class="tag">amor</span>
