--- a/sorpresaQR/lovecard.html
+++ b/sorpresaQR/lovecard.html
@@ -220,6 +220,12 @@
         .contenido .fecha { display: block; text-align: right; font-size: 1.1rem; font-family: var(--fuente-fecha); font-style: italic; color: #888; margin-bottom: 20px; }
         .contenido .saludo { font-size: 2.2rem; margin-bottom: 15px; text-decoration: bold; }
         .contenido .cuerpo { font-size: 1.6rem; line-height: 1.5; margin-bottom: 20px; }
+        .contenido .cuerpo {
+            font-size: 1.6rem;
+            line-height: 1.5;
+            margin-bottom: 20px;
+            margin-left: 25px;
+        }
         .contenido .firma { font-size: 2.5rem; text-align: right; color: var(--color-firma); margin: 0; }
 
         .bloque-firma {
@@ -419,7 +425,7 @@
                     <div class="contenido">
                         <span class="fecha">Donde el tiempo no existe</span>
                         <p class="saludo">Para la chica más increíble solcitoo,</p>
-                        <p class="cuerpo">Quiero que nunca dudes de lo especial que sos. De verdad, sos una persona única, con una luz y una energía que contagian alegría a todos los que te rodean. No solo sos hermosa por fuera, sino que tu corazón y tu forma de ser te hacen aún más linda.</p>
+                        <p class="cuerpo">Quiero que nunca dudes de lo especial que sos. De verdad, sos una  persona única, con una luz y una energía que contagian alegría a todos los que te rodean. No solo sos hermosa por fuera, sino que tu corazón y tu forma de ser te hacen aún más linda.</p>
                         <p class="cuerpo">Si alguna vez te sentís insegura o alguien te hace sentir mal, que se prepare porque lo hacemos cagarr (que se joda y soporten). Sos valiosa, fuerte, divertida y hermosa en todos los sentidos. Gracias por existir y por dejarme compartir momentos con vos. Nunca cambies, porque así como sos, ya sos perfecta.</p>
                         
                         <div class="bloque-firma">
@@ -445,7 +451,7 @@
     </main>
     
     <!-- <audio id="sound" src="https://dl.dropboxusercontent.com/scl/fi/esct592hxwzjyf9a2egpc/Si-supieras-lo-que-siento-con-mirarte....mp3?rlkey=xqbaohnpyd7b3mejkvvdg6dlq&st=2vagx61x&dl=1" type="audio/mpeg" preload="auto"></audio> -->
-    <audio id="sound" src="morat.mp4" type="audio/mpeg" preload="auto"></audio>
+    <audio id="sound" src="morat1.mp4" type="audio/mpeg" preload="auto"></audio>
 
     <script>
         window.addEventListener('load', () => {
