--- a/sorpresaQR/lovecard.html
+++ b/sorpresaQR/lovecard.html
@@ -438,7 +438,7 @@
                                             <span class="flecha-indicador">⬇️</span>
                                         </div>
                         
-            <a href="heartsimple.html" target="_blank"  style="font-family: 'Lora', serif; font-size: 1.2rem; color: #c91515; text-decoration: none; border: 2px solid #c91515; border-radius: 8px; padding: 8px 18px; background: #fff0f5; transition: background 0.2s, color 0.2s; display: inline-block; margin-top: 18px;">
+            <a href="heartsimple.html"  style="font-family: 'Lora', serif; font-size: 1.2rem; color: #c91515; text-decoration: none; border: 2px solid #c91515; border-radius: 8px; padding: 8px 18px; background: #fff0f5; transition: background 0.2s, color 0.2s; display: inline-block; margin-top: 18px;">
                 Continuar Sorpresa ❤️
             </a>
         </div>
