--- a/corazonquetirafrases/index.html
+++ b/corazonquetirafrases/index.html
@@ -113,26 +113,7 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-    .volver {
-      margin-top: 18px;
-      display: inline-block;
-      padding: 10px 22px;
-      background: linear-gradient(90deg, #ffe0ef 60%, #fffde7 100%);
-      border: 1.5px solid var(--accent1);
-      border-radius: 999px;
-      color: var(--accent1);
-      font-size: 1.05rem;
-      font-weight: 600;
-      box-shadow: 0 4px 18px #f8bbd055;
-      text-decoration: none;
-      letter-spacing: 0.01em;
-      transition: background .15s, border-color .15s, color .15s;
-    }
-    .volver:hover {
-      background: linear-gradient(90deg, #ffe082 60%, #ffe0ef 100%);
-      border-color: var(--gold);
-      color: #b48bbd;
-    }
+    
        .volver-inicio{
         position: fixed;
         top: 16px;
@@ -167,8 +148,8 @@
    <canvas id="particle-canvas" class="absolute inset-0"></canvas><!-- Phrases container -->
    <div id="phrases" class="absolute inset-0 pointer-events-none"></div><!-- Main title -->
    <div class="relative z-10 text-center px-4">
-    <h1 id="main-phrase" class="dancing-font text-4xl md:text-6xl lg:text-7xl text-pink-300 mb-4 drop-shadow-lg">Te amo infinitamente</h1>
-    <p class="quicksand-font text-pink-200/70 text-sm md:text-base tracking-widest uppercase">Hecho con amor ♥</p>
+    <h1 id="main-phrase" class="dancing-font text-4xl md:text-6xl lg:text-7xl text-pink-300 mb-4 drop-shadow-lg">Te quiero infinitamente</h1>
+    <p class="quicksand-font text-pink-200/70 text-sm md:text-base tracking-widest uppercase">Hecho con amor Sol ♥</p>
    </div><!-- Instruction hint -->
    <div class="absolute bottom-8 left-1/2 -translate-x-1/2 z-10">
     <p class="text-pink-300/50 text-xs md:text-sm quicksand-font animate-pulse">✨ Observa cómo el amor toma forma ✨</p>
