--- a/corazonflechassecruxan/index.html
+++ b/corazonflechassecruxan/index.html
@@ -19,6 +19,7 @@
           position: fixed;
           top: 0;
           left: 0;
+          z-index: 1;
         }
         @keyframes sol-brillo {
           0% { filter: drop-shadow(0 0 0px #ffe082) brightness(1); }
@@ -33,9 +34,29 @@
             top: 10px;
           }
         }
+.volver-inicio{
+  position: fixed;
+  top: 14px;
+  left: 14px;
+  z-index: 9999;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  padding: 10px 12px;
+  border-radius: 999px;
+  background: rgba(255,255,255,.78);
+  border: 1px solid rgba(0,0,0,.10);
+  color: #3b2f2f;
+  text-decoration: none;
+  font-weight: 800;
+  box-shadow: 0 10px 26px rgba(0,0,0,.18);
+}
+.volver-inicio:hover{ transform: translateY(-1px); background: rgba(255,255,255,.92); }
     </style>
 </head>
 <body>
+<a class="volver-inicio" href="../index.html" aria-label="Volver al inicio">← </a>
+
 <div id="frase-top-sol" style="width:100vw;text-align:center;position:fixed;top:18px;left:0;z-index:10;pointer-events:none;">
 <span id="solcitoo-anim" style="font-family:'Segoe Script','Dancing Script',cursive,sans-serif;font-size:1.35rem;color:#ffe082;text-shadow:0 2px 10px #000a,0 1px 0 #fff;letter-spacing:0.03em;animation:sol-brillo 2.5s ease-in-out infinite alternate; position:relative; top:32px;">Para tu Solcitoo ☀️</span>
 </div>
